end of class 12/1/2016

--- a/website/css/foundation.css
+++ b/website/css/foundation.css
@@ -126,8 +126,8 @@ h1 {
    * Address styling not present in IE 8/9.
    */
 mark {
-  background: #ff0;
-  color: #000; }
+  background: ##000000;
+  color: #000000; }
 
 /**
    * Address inconsistent and variable font size in all browsers.
