--- a/website/css/app-hero.css
+++ b/website/css/app-hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background: url("https://unsplash.imgix.net/reserve/QTrNn7DETWGsjyS5L2n5__MG_8345.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") no-repeat center center;
+  background: url("http://wersm.com/wp-content/uploads/2015/06/wersm-marketing-technology-skills-657x360.png") no-repeat center center;
   background-size: cover;
   height: 80vh;
   margin-bottom: 3rem; }
